# Topicos-IA

./: README.md
Despliegue de modelos/: .gitignore
Despliegue-de-modelos/: README.md
Despliegue-de-modelos/Mlflow/: .gitignore  Pipfile  README.md
Despliegue-de-modelos/Pytorch-cpp/: CMakeLists.txt  README.md  main.cpp
Despliegue-de-modelos/Pytorch-cpp/intro/: CMakeLists.txt  intro.cpp
ML-para-Data-Science/: .gitignore  README.md
ML-para-Data-Science/Notebooks/: Clase1-extension.ipynb  Clase1.ipynb  Clase10.ipynb  Clase11.ipynb  Clase12.ipynb  Clase13.ipynb  Clase2.ipynb  Clase3-extension.ipynb  Clase3.ipynb  Clase4.ipynb  Clase5.ipynb  Clase6.ipynb  Clase7.ipynb  Clase8.ipynb  Clase9.ipynb  Datos_Graficos.csv  Intro_pandas.ipynb  Titanic.csv  bodyfat.xlsx  datase.csv  spam.csv
NLP/: .gitignore  README.md
NLP/Notebooks/: 0_NLP_Basics.ipynb  10_Seq2Seq_con_Transformers.ipynb  11_speech_command_recognition_with_torchaudio.ipynb  12.0_HuggingFace.ipynb  12.1_pipeline.ipynb  12.2_Instantiate_Transformer_model.ipynb  12.3_tokenization.ipynb  12.4_batching_inputs.ipynb  12.5_datasets.ipynb  12.6_proprocess_sentence_pairs.ipynb  12.7_dynamic_padding.ipynb  12.8_Trainer_API.ipynb  13_BERT_variantes.ipynb  1_Tokenization_examples.ipynb  2_Bag_of_Words.ipynb  3_Word Embeddings.ipynb  3_Word_Embeddings.ipynb  4_GloVe.ipynb  6_LSTM.ipynb  7_Seq_2_Seq_LSTM.ipynb  8_Seq_2_Seq_Attention.ipynb  9_Introduccion_Transformer.ipynb
NLP/generacion-nombres-RNN/: README.md
Python para ML y DL/: README.md
Python-para-ML-y-DL/: README.md
(+192 files in other folders)
